# OrbbecSDK

./: OrbbecSDKConfig.cmake  README.md  README_CN.md
examples/: CMakeLists.txt
examples/cpp/Sample-DoubleInfraredViewer/: DoubleInfraredViewer.cpp
misc/scripts/: 99-obsensor-libusb.rules
